Fixing header spacing and mobile

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -72,11 +72,11 @@ body {
   transition: transform ease-out 0.25s, opacity 0s 0.25s, margin-top ease-out 0.25s 0.25s;
 }
 
-.navbar-burger span + span {
+.navbar-burger span+span {
   margin-top: 0.25rem;
 }
 
-.navbar-burger.is-active span + span {
+.navbar-burger.is-active span+span {
   margin-top: -1.5px;
 }
 
@@ -202,8 +202,8 @@ body {
     display: flex;
   }
 
-  .navbar-menu {
-    flex: auto;
+  .navbar {
+    width: 95vw;
   }
 
   .navbar-end {
@@ -237,12 +237,12 @@ body {
     top: 50%;
   }
 
-  .navbar-end > .navbar-item,
+  .navbar-end>.navbar-item,
   .navbar-end .navbar-link {
     color: var(--navbar-font-color);
   }
 
-  .navbar-end > a.navbar-item:hover,
+  .navbar-end>a.navbar-item:hover,
   .navbar-end .navbar-link:hover,
   .navbar-end .navbar-item.has-dropdown:hover .navbar-link {
     background: var(--navbar_hover-background);
@@ -275,9 +275,11 @@ body {
       visibility: hidden;
       transform: translateY(-5px);
     }
+
     1% {
       visibility: visible;
     }
+
     to {
       visibility: visible;
       opacity: 1;
@@ -306,6 +308,7 @@ body {
     font-size: 0.8rem;
     font-weight: bold;
   }
+
   .navbar-dropdown .navbar-item-special {
     padding-bottom: 20px;
     margin-bottom: 1.5rem;
@@ -356,10 +359,4 @@ body {
 .navbar-item-special-2 .external-link-icon {
   width: 12px;
   margin-left: 10px;
-}
-
-.search-position {
-  display: flex;
-  justify-content: flex-end;
-  width: 100%;
 }
